--- a/h/templates/layouts/profile.html.jinja2
+++ b/h/templates/layouts/profile.html.jinja2
@@ -3,6 +3,7 @@
 {%- set nav_pages = [
     ('profile', 'Profile'),
     ('profile_notifications', 'Notifications'),
+    ('profile_developer', 'Developer'),
 ] -%}
 
 {% block page_title %}{{ page_title }}{% endblock %}
