Remove `embed_media` feature flag conditionals

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -80,8 +80,7 @@
              collapsed-height="400"
              overflow-hysteresis="20">
       <markdown ng-model="vm.form.text"
-                read-only="!vm.editing()"
-                embeds-enabled="vm.feature('embed_media')">
+                read-only="!vm.editing()">
       </markdown>
     </excerpt>
   </section>
