--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -57,8 +57,7 @@
   <section class="annotation-quote-list"
            ng-repeat="target in vm.target() track by $index"
            ng-if="vm.hasQuotes()">
-    <excerpt enabled="vm.feature('truncate_annotations')"
-             collapsed-height="40"
+    <excerpt collapsed-height="40"
              inline-controls="true"
              overflow-hysteresis="20">
       <blockquote class="annotation-quote"
@@ -73,7 +72,7 @@
 
   <!-- Body -->
   <section name="text" class="annotation-body">
-    <excerpt enabled="vm.feature('truncate_annotations') && !vm.editing()"
+    <excerpt enabled="!vm.editing()"
              inline-controls="false"
              on-collapsible-changed="vm.setBodyCollapsible(collapsible)"
              collapse="vm.collapseBody"
