--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -11,17 +11,16 @@
   <p><em>Message not available.</em></p>
 </div>
 
-<article class="annotation thread-message {{vm.collapsed && 'collapsed'}}"
+<annotation class="annotation thread-message {{vm.collapsed && 'collapsed'}}"
          name="annotation"
          annotation="vm.container.message"
          is-last-reply="$last"
          is-sidebar="::isSidebar"
-         annotation-show-reply-count="{{vm.shouldShowNumReplies()}}"
-         annotation-reply-count="{{vm.numReplies()}}"
-         annotation-reply-count-click="vm.toggleCollapsed()"
+         reply-count="vm.numReplies()"
+         on-reply-count-click="vm.toggleCollapsed()"
          ng-if="vm.container.message"
          ng-show="vm.matchesFilter()">
-</article>
+</annotation>
 
 <div class="thread-load-more" ng-show="vm.shouldShowLoadMore()">
   <a class="load-more small"
