--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -149,4 +149,5 @@ $highlight-color-third: rgba(192, 192, 49, 0.4);
 $highlight-color-focus: rgba(156, 230, 255, 0.5);
 $score-width: 40px;
 $score-height: $score-width;
+$top-bar-height: 40px;
 $input-border-radius: 2px;
