Simplify routing for API
This commit removes most of the Pyramid traversal routing machinery used
by the app and the API. Hopefully this makes it somewhat easier to
understand where routes are defined, and it makes URL generation cleaner
throughout the application.

Of note:

- All the API views are now named routes, such as `api.annotation` or
  `api.search`. We do still use traversal, but in a limited way, in
  order to provide context objects (and hence access control lists) for
  particular routes. See `h/api/__init__.py` for where the API's named
  routes are connected up to URLs.
- /api now redirects to /api/ by means of the `append_slash=True`
  predicate on our 404 handler. This means that the 404 handler will
  automatically redirect requests lacking a trailing slash to the
  "slashed" version of the URL if it would result in a route match,
  across the application.
- Our API no longer responds to arbitrary additions to the request path
  for its routes. That is, /api/search/foo/bar/baz is now a 404 rather
  than matching the search endpoint. Strictly I suppose this is a
  breaking change, but if you were depending on that behaviour I suspect
  you deserve what's coming to you ;)
- All use of `request.resource_url(...)` throughout the application has
  been replaced by use of `request.route_url(...)`. This results in
  easier-to-understand URL generation, but also means we don't need to
  declare __name__ and __parent__ attributes on every traversal context
  factory.
- Rejection of annotation creation requests that try to create
  annotations in groups of which the authenticated user is not a member
  has moved into the annotation validators in `h.api.schemas` rather
  than through a magic ACL.

--- a/h/templates/old-home.html.jinja2
+++ b/h/templates/old-home.html.jinja2
@@ -242,7 +242,7 @@
                     <div class="installer__section--addtosite">
                       <p>
                         <input class="form-control" type="text"
-                               value="<script async defer src=&quot;{{request.resource_url(context, 'embed.js')}}&quot;></script>">
+                               value="<script async defer src=&quot;{{request.route_url('embed')}}&quot;></script>">
                       </p>
                       <p>Add the above script tag to your web site's HTML to load
                       the Hypothesis sidebar on your site.</p>
