--- a/h/templates/bookmarklet.js.jinja2
+++ b/h/templates/bookmarklet.js.jinja2
@@ -1,5 +1,5 @@
 (function (window, document, location) {
-  var embedUrl = '{{request.resource_url(context, "embed.js")}}';
+  var embedUrl = '{{request.route_url("embed")}}';
   var isHTTPS = location.protocol.indexOf('https') === 0;
   var isEmbedHTTPS = embedUrl.indexOf('https') === 0;
   var isLocal = location.protocol === 'file:';
