--- a/h/templates/includes/install_modals.html.jinja2
+++ b/h/templates/includes/install_modals.html.jinja2
@@ -34,7 +34,7 @@
         <div class="installer__section--addtosite">
           <p>
             <input class="installer__embed-script" type="text"
-                    value="<script async defer src=&quot;{{request.resource_url(context, 'embed.js')}}&quot;></script>">
+                    value="<script async defer src=&quot;{{request.route_url('embed')}}&quot;></script>">
           </p>
           <p>Add the above script tag to your web site's HTML to load
           the Hypothesis sidebar on your site.</p>
