Move component-specific styles into their own files
Move styles for the <group-list> and <signin-control>
components out of app.scss and into the appropriate
SCSS files.

--- a/h/static/styles/signin-control.scss
+++ b/h/static/styles/signin-control.scss
@@ -2,3 +2,26 @@
   font-size: $body2-font-size;
   padding-left: 6px;
 }
+
+/* The user account dropdown menu */
+.user-picker {
+  .avatar {
+    border-radius: 2px;
+  }
+
+  .dropdown-toggle {
+    .provider {
+      color: $gray-light;
+      display: none;
+    }
+    &:hover {
+      .provider {
+        display: inline;
+      }
+    }
+  }
+
+  .dropdown.open .provider {
+    display: inline;
+  }
+}
