Rename user-picker style
Rename style to signin-control-menu to match
the name of the associated component.

--- a/h/templates/client/signin_control.html
+++ b/h/templates/client/signin_control.html
@@ -7,7 +7,7 @@
   / <a href="" ng-click="vm.onLogin()">Sign in</a>
 </span>
 <div ng-if="vm.newStyle"
-     class="pull-right user-picker"
+     class="pull-right signin-control-menu"
      dropdown
      keyboard-nav>
   <a role="button"
@@ -47,7 +47,7 @@
   <a href="" ng-click="vm.onLogin()">Sign in</a>
 </span>
 <div ng-if="!vm.newStyle"
-     class="pull-right user-picker"
+     class="pull-right signin-control-menu"
      dropdown
      keyboard-nav>
   <span role="button" data-toggle="dropdown" dropdown-toggle>
