Make style and component names consistent
 * Make the .scss file names consistent with the names
   of their components for <annotation>, <thread>
   and <markdown>.

 * Sort component includes alphabetically and use relative
   paths. Although SASS technically doesn't care about
   relative paths, it makes the code style more consistent
   and also provides consistency with the JS code.

 * Move app-specific component style includes out of
   common.scss into app.scss

--- a/h/static/styles/annotation.scss
+++ b/h/static/styles/annotation.scss
@@ -143,11 +143,8 @@ $annotation-card-left-padding: 10px;
   }
 }
 
-//PRIVACY CONTROL////////////////////////////
-privacy {
-  position: relative;
-  top: 2px;
-}
+// Share dialog
+// ------------
 
 .share-dialog-wrapper {
   position: relative;
